--- a/Webdev-project-1/appsettings.json
+++ b/Webdev-project-1/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "UFO_context": "Server=(localdb)\\mssqllocaldb;Database=Webdev_project_1.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  //Localization for site
+  "SiteLocale" :  "no-NO"
 }
